# TpMp

./: LICENSE  Makefile.am  README.md  configure.ac  yaml.sty
Kernel/: init.m
MMA/: Drawing.m  Mapping.m  Model.m  Output.m
data/: phi3.tpmp  sgy.tpmp  sm.tpmp  sqcd.tpmp  yaml.sty
doc/: TpMp.bib  TpMp.tex
mma/: tools.m
src/: Makefile.am  TpMp.tm  TpMpimpl.cpp  TpMpmain.cpp  graph.hpp  sigma.hpp  tadpole.hpp  tpmpimpl.cpp  types.cpp  types.hpp
tests/tadpoles/: tad.m
