##
## Makefile.am for TpMp
##
## written by Andrey Pikelner
##
## Process this file with automake to produce Makefile.in
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4
SUBDIRS =         \
	src

# pkgconfigdir = $(libdir)/pkgconfig
# pkgconfig_DATA = tpmp.pc

# EXTRA_DIST = tpmp.pc.in README.md
# DISTCLEANFILES = tpmp.pc

# $(pkgconfig_DATA): config.status

